# CappyCloud

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  GEMINI.md  README.md  docker-compose.dev.yml  docker-compose.yml  start.ps1
.agents/code-review/: SKILL.md
.agents/create-migration/: SKILL.md
.agents/frontend-implementation/: SKILL.md
.agents/skills/create-migration/: SKILL.md
.agents/skills/service-implementation/: SKILL.md
.agents/vulnerability-auditor/: SKILL.md
.cursor/rules/: dev-standards.mdc
.cursor/skills/create-migration/: SKILL.md
.cursor/skills/prepare-pr/: SKILL.md
.github/workflows/: ci.yml  frontend.yml  pre-commit.yml
docs/: AGENT_RULES.md  ARCHITECTURE.md
docs/decisions/: adr-001-hexagonal-architecture.md
proto/: openclaude.proto
scripts/: check_file_length.py
services/api/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
services/api/alembic/: env.py
services/api/alembic/versions/: 20260416_003703_add_agent_and_cicd_tables.py  20260416_233234_add_env_slug_worktree_branch_path_to_.py  20260419_124133_seed_default_sandbox.py  20260420_005033_drop_legacy_conversation_columns.py  20260422_133200_add_ai_model_id_to_agent_task.py  20260423_024627_add_agents_and_skills_with_vector_.py  20260424_000001_env_repo_management.py
services/api/app/: config.py  database.py  deps.py  main.py  models.py  schemas.py  schemas_agents.py  security.py
services/api/app/adapters/primary/http/: _routines_scheduler.py  _webhook_github.py  _webhook_gitlab.py  agents.py  ai_models.py  auth.py  conversation_diff.py  conversation_files.py  conversation_pr.py  conversations.py  deps.py  environments.py  git_providers.py  repositories_admin.py  routines.py  sandboxes.py  skills.py  skills_search.py  tasks.py  webhooks.py  workspaces.py
services/api/app/adapters/secondary/agent/: pipeline_adapter.py
services/api/app/adapters/secondary/persistence/: sqlalchemy_ai_model_repo.py  sqlalchemy_conversation_repo.py  sqlalchemy_message_repo.py  sqlalchemy_repo_env_repo.py  sqlalchemy_repository_repo.py  sqlalchemy_user_repo.py
services/api/app/application/use_cases/: _stream_helpers.py  auth.py  conversations.py  repo_environments.py
services/api/app/domain/: __init__.py  entities.py  value_objects.py
services/api/app/infrastructure/: config.py  database.py  embeddings.py  encryption.py  orm_models.py  orm_models_agent.py  orm_models_agents.py  orm_models_execution.py  orm_models_platform.py  sandbox_watchdog.py  security.py  skill_importer.py
services/api/app/ports/: __init__.py  agent.py  repositories.py  services.py
services/api/app/routers/: auth.py  conversations.py
services/api/scripts/: backfill_repo_id_in_conversations.py
services/api/tests/: conftest.py
services/api/tests/adapter/: test_sqlalchemy_repos.py
services/api/tests/integration/: test_api.py
services/api/tests/unit/: test_encryption.py  test_watchdog.py
services/api/tests/unit/domain/: test_entities.py  test_value_objects.py
services/api/tests/unit/use_cases/: test_auth_use_cases.py  test_conversation_use_cases.py
services/cappycloud_agent/: __init__.py  _agent_context.py  _environment_manager.py  _grpc_bridge.py  _grpc_helpers.py  _grpc_session.py  _pipeline_helpers.py  _session_store.py  _task_dispatcher.py  _task_runner.py  cappycloud_pipeline.py
services/cli/: pyproject.toml
services/cli/cappy/: __init__.py  _routine_cmds.py  _task_cmds.py  _webhook_cmds.py  main.py
services/code-indexer/: Dockerfile  requirements.txt
services/pipelines/: _docker_manager.py  _grpc_bridge.py  _grpc_session.py  _pipeline_utils.py  cappycloud_pipeline.py
services/postgres/: 01-sandbox-multi-repo.sql  02-platform-control-plane.sql
services/sandbox/: CLAUDE.md  Dockerfile  entrypoint.sh  env_init.sh  git_handlers.js  repo_handlers.js  session_server.js  session_start.sh
services/sandbox/patches/: auto-approve-tools.patch  generate_patches.sh
web/: Dockerfile  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx  api.ts  index.css  main.tsx
web/src/components/: ActionRequiredCard.tsx  DiffViewer.module.css  DiffViewer.tsx  FileExplorer.module.css  FileExplorer.tsx  SkillsPageSections.tsx  ThinkingIndicator.tsx  ToolCallCard.tsx  chat.module.css
web/src/pages/: AgentsPage.tsx  ChatPage.tsx  EnvironmentsPage.tsx  SettingsPage.tsx  SkillsPage.tsx
