[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "cappycloud-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
    "types-passlib>=1.7",
]

# ---------------------------------------------------------------------------
# Ruff — linting + formatting
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # assert allowed in tests

[tool.ruff.format]
quote-style = "double"

# ---------------------------------------------------------------------------
# Mypy — static type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
exclude = ["tests/"]

# ---------------------------------------------------------------------------
# Pytest — test runner + coverage
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["app"]
omit = [
    "app/infrastructure/orm_models.py",
    "app/routers/*",
    # Legacy backward-compat shims — pure re-exports, no logic to test
    "app/config.py",
    "app/database.py",
    "app/deps.py",
    "app/models.py",
    "app/security.py",
    # Wraps external cappycloud_agent package (not available in test env)
    "app/adapters/secondary/agent/pipeline_adapter.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
