[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "cappy"
version = "0.1.0"
description = "CappyCloud CLI — gestão de ambientes, tasks e routines"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "httpx>=0.28.0",
]

[project.scripts]
cappy = "cappy.main:app"
